<resources>
    <string name="app_name">ProjectFinal</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="localiza_o">Localização</string>

    <string name="registar">Registar</string>
    <string name="login">Login</string>
    <string name="codigo_postal">Codigo Postal</string>
    <string name="nome_da_cidade">Nome da Cidade</string>
    <string name="adicionar">Adicionar</string>
    <string name="add_citys">Add Citys</string>
    <string name="nome_de_loja">Nome de loja</string>
    <string name="confirmar">Confirmar</string>
    <string name="todo">TODO</string>

    <string name="hint">hint</string>
    <string name="horario_funcionamento">Horario Funcionamento</string>
    <string name="regras">Regras</string>

    <string name="horario_de_funcionamento">Horario de Funcionamento</string>
    <string name="rua">Rua</string>
    <string name="nome_cafe_bar">Nome_Cafe_bar</string>
    <string name="rua_cafe_bar">Rua_Cafe_bar</string>
    <string name="horario_cafe_bar">Horario_cafe_bar</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="ver_dados_guardados">Ver dados guardados</string>
    <string name="atualizar">Atualizar</string>
    <string name="inserir">Inserir</string>


</resources>
